feat: add bio management
